--- a/index.html
+++ b/index.html
@@ -31,63 +31,57 @@
 
 <form class="container">
       <!-- Time Blocks -->
-  <div class="row block" id="8">
-    <div class="col-md-1">8AM</div>
-      <textarea class="col-md-10 input" id="8hr" placeholder="What To Do.."></textarea>
-        <button class="col-md-1 btn saveButton" id= "saveBtn"><i class="fas fa-check"></i></button>
-  </div>
-
   <div class="row block" id="9">
     <div class="col-md-1">9AM</div>
-      <textarea class="col-md-10 input" id="9hr" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="9a" placeholder="What To Do.."></input>
         <button class="col-md-1 btn saveButton" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
   
   <div class="row block" id="10">
     <div class="col-md-1">10AM</div>
-      <textarea class="col-md-10 input" id="10hr" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="10a" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
   
   <div class="row block" id="11">
     <div class="col-md-1">11AM</div>
-      <textarea class="col-md-10 input" id="hr=11hr" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="hr=11a" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
   
   <div class="row block" id="12">
     <div class="col-md-1">12PM</div>
-      <textarea class="col-md-10 input" id="12hr" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="12p" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
   
   <div class="row block" id="1">
     <div class="col-md-1">1PM</div>
-      <textarea class="col-md-10 input" id="1hr" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="1p" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
 
   <div class="row block" id="2">
     <div class="col-md-1">2PM</div>
-      <textarea class="col-md-10 input" id="2hr" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="2p" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
 
   <div class="row block" id="3">
     <div class="col-md-1">3PM</div>
-      <textarea class="col-md-10 input" id="3hr" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="3p" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
 
   <div class="row block" id="4">
     <div class="col-md-1">4PM</div>
-      <textarea class="col-md-10 input" id="4hr" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="4p" placeholder="What To Do.."></input>
         <button class="col-md-1 btn"><i class="fas fa-check"></i></button>
   </div>
 
   <div class="row block" id="5">
     <div class="col-md-1">5PM</div>
-      <textarea class="col-md-10 input" id="5hr" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="5p" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>  
 </form>
