save text need more dynamic

--- a/index.html
+++ b/index.html
@@ -29,62 +29,82 @@
       <p id="currentDay" class="lead"><link/p>
     </header>
 
-<form class="container">
+<div class="container">
       <!-- Time Blocks -->
-  <div class="row block" id="9">
-    <div class="col-md-1">9AM</div>
-      <input class="col-md-10 input" id="9a" placeholder="What To Do.."></input>
-        <button class="col-md-1 btn saveButton" id= "saveBtn"><i class="fas fa-check"></i></button>
-  </div>
-  
-  <div class="row block" id="10">
-    <div class="col-md-1">10AM</div>
-      <input class="col-md-10 input" id="10a" placeholder="What To Do.."></input>
-        <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
-  </div>
-  
-  <div class="row block" id="11">
-    <div class="col-md-1">11AM</div>
-      <input class="col-md-10 input" id="hr=11a" placeholder="What To Do.."></input>
-        <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
-  </div>
-  
-  <div class="row block" id="12">
-    <div class="col-md-1">12PM</div>
-      <input class="col-md-10 input" id="12p" placeholder="What To Do.."></input>
-        <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
-  </div>
-  
-  <div class="row block" id="1">
-    <div class="col-md-1">1PM</div>
-      <input class="col-md-10 input" id="1p" placeholder="What To Do.."></input>
-        <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
-  </div>
-
-  <div class="row block" id="2">
-    <div class="col-md-1">2PM</div>
-      <input class="col-md-10 input" id="2p" placeholder="What To Do.."></input>
-        <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
-  </div>
-
-  <div class="row block" id="3">
-    <div class="col-md-1">3PM</div>
-      <input class="col-md-10 input" id="3p" placeholder="What To Do.."></input>
-        <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
-  </div>
-
-  <div class="row block" id="4">
-    <div class="col-md-1">4PM</div>
-      <input class="col-md-10 input" id="4p" placeholder="What To Do.."></input>
-        <button class="col-md-1 btn"><i class="fas fa-check"></i></button>
-  </div>
-
-  <div class="row block" id="5">
-    <div class="col-md-1">5PM</div>
-      <input class="col-md-10 input" id="5p" placeholder="What To Do.."></input>
-        <button class="col-md-1 btn" id= "saveBtn"><i class="fas fa-check"></i></button>
-  </div>  
+<form>
+    <div class="row block" id="9a">
+      <div class="col-md-1">9AM</div>
+        <textarea class="col-md-10" id="9" placeholder="What To Do.."></textarea>
+          <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
+    </div>  
 </form>
+  
+<form>
+  <div class="row block" id="10a">
+    <div class="col-md-1">10AM</div>
+      <textarea class="col-md-10 form" id="10" placeholder="What To Do.."></textarea>
+        <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
+  </div>
+</form>
+ 
+<form>  
+  <div class="row block" id="11a">
+    <div class="col-md-1">11AM</div>
+      <textarea class="col-md-10 input" id="11" placeholder="What To Do.."></textarea>
+        <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
+  </div>
+</form> 
+
+<form>
+  <div class="row block" id="12p">
+    <div class="col-md-1">12PM</div>
+      <textarea class="col-md-10 input" id="12" placeholder="What To Do.."></textarea>
+        <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
+  </div>
+</form>
+
+
+<form>
+  <div class="row block" id="1p">
+    <div class="col-md-1">1PM</div>
+      <textarea class="col-md-10 input" id="13" placeholder="What To Do.."></textarea>
+        <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
+  </div>
+</form> 
+
+<form>
+  <div class="row block" id="2p">
+    <div class="col-md-1">2PM</div>
+      <textarea class="col-md-10 input" id="14" placeholder="What To Do.."></textarea>
+        <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
+  </div>
+</form> 
+
+<form>
+  <div class="row block" id="3p">
+    <div class="col-md-1">3PM</div>
+      <input class="col-md-10 input" id="15" placeholder="What To Do.."></input>
+        <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
+  </div>
+</form> 
+
+<form>
+  <div class="row block" id="4p">
+    <div class="col-md-1">4PM</div>
+      <input class="col-md-10 input" id="16" placeholder="What To Do.."></input>
+        <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
+  </div>
+</form> 
+
+<form>
+  <div class="row block" id="5p">
+    <div class="col-md-1">5PM</div>
+      <textarea class="col-md-10 input" id="17" placeholder="What To Do.."></textarea>
+        <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
+  </div> 
+</form> 
+
+</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
