--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <form>
   <div class="row block" id="3p">
     <div class="col-md-1">3PM</div>
-      <input class="col-md-10 input" id="15" placeholder="What To Do.."></input>
+      <textarea class="col-md-10 input" id="15" placeholder="What To Do.."></textarea>
         <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
 </form> 
@@ -91,7 +91,7 @@
 <form>
   <div class="row block" id="4p">
     <div class="col-md-1">4PM</div>
-      <input class="col-md-10 input" id="16" placeholder="What To Do.."></input>
+      <textarea class="col-md-10 input" id="16" placeholder="What To Do.."></textarea>
         <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
 </form> 
