button refreshes color works

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <form>
     <div class="row block" id="9a">
       <div class="col-md-1">9AM</div>
-        <textarea class="col-md-10" id="9" placeholder="What To Do.."></textarea>
+        <input class="col-md-10" id="9" placeholder="What To Do.."></input>
           <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
     </div>  
 </form>
@@ -42,7 +42,7 @@
 <form>
   <div class="row block" id="10a">
     <div class="col-md-1">10AM</div>
-      <textarea class="col-md-10 form" id="10" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 form" id="10" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
 </form>
@@ -50,7 +50,7 @@
 <form>  
   <div class="row block" id="11a">
     <div class="col-md-1">11AM</div>
-      <textarea class="col-md-10 input" id="11" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="11" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
 </form> 
@@ -58,7 +58,7 @@
 <form>
   <div class="row block" id="12p">
     <div class="col-md-1">12PM</div>
-      <textarea class="col-md-10 input" id="12" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="12" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
 </form>
@@ -67,7 +67,7 @@
 <form>
   <div class="row block" id="1p">
     <div class="col-md-1">1PM</div>
-      <textarea class="col-md-10 input" id="13" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="13" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
 </form> 
@@ -75,7 +75,7 @@
 <form>
   <div class="row block" id="2p">
     <div class="col-md-1">2PM</div>
-      <textarea class="col-md-10 input" id="14" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="14" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
 </form> 
@@ -83,7 +83,7 @@
 <form>
   <div class="row block" id="3p">
     <div class="col-md-1">3PM</div>
-      <textarea class="col-md-10 input" id="15" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="15" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
 </form> 
@@ -91,7 +91,7 @@
 <form>
   <div class="row block" id="4p">
     <div class="col-md-1">4PM</div>
-      <textarea class="col-md-10 input" id="16" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="16" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div>
 </form> 
@@ -99,7 +99,7 @@
 <form>
   <div class="row block" id="5p">
     <div class="col-md-1">5PM</div>
-      <textarea class="col-md-10 input" id="17" placeholder="What To Do.."></textarea>
+      <input class="col-md-10 input" id="17" placeholder="What To Do.."></input>
         <button class="col-md-1 btn" type="submit" id= "saveBtn"><i class="fas fa-check"></i></button>
   </div> 
 </form> 
